Blender crashes while using Ghost (new depsgraph) #52432

Closed
opened 2017-08-18 07:10:18 +02:00 by ¿? · 8 comments

Win 7 64bit, GTX 770 oc

Broken: 2.79 ac28a4f

When trying to move/rotate an empty target/control for a Copy Rotation/Copy Location, while Armature>>Ghost is enabled, Blender will crash.
Error: EXCEPTION_ACCESS_VIOLATION

In my rig (metarig), I have IK constraints (length 1) set to other bones; if those are removed, Blender won't crash; if even one is set, Blender crashes.
Increase the Range in the Armature's Ghost from 0, then try to rotate the arrow above the head.
Or if you rotate the arrow first, enable ghost, then select the arrow again, it crashes.

untitled.blend

note: adding an IK constraint to the bone (targeting the empty) stops the crash. The crash also stops with 0 influence/chain/etc but only if the target is set to the specific empty (in the Copy Rotation constraint)

Win 7 64bit, GTX 770 oc Broken: 2.79 ac28a4f When trying to move/rotate an empty target/control for a Copy Rotation/Copy Location, while Armature>>Ghost is enabled, Blender will crash. Error: EXCEPTION_ACCESS_VIOLATION In my rig (metarig), I have IK constraints (length 1) set to other bones; if those are removed, Blender won't crash; if even one is set, Blender crashes. Increase the Range in the Armature's Ghost from 0, then try to rotate the arrow above the head. Or if you rotate the arrow first, enable ghost, then select the arrow again, it crashes. [untitled.blend](https://archive.blender.org/developer/F717017/untitled.blend) note: adding an IK constraint to the bone (targeting the empty) stops the crash. The crash also stops with 0 influence/chain/etc but only if the target is set to the specific empty (in the Copy Rotation constraint)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ebone

Added subscriber: @Ebone

Added subscriber: @skororu

Added subscriber: @skororu

macOS 10.12.6, MacBook Air, NVIDIA GeForce 320M 256 MB

broken:
2.78c, build hash e92f235
2.79rc1, build hash: f934f54
Daily build, Hash 535e83687d

I can reproduce the crash here, launched from the command line with **--enable-new-depsgraph --debug-depsgraph **.

report_279rc1.txt
debug_279rc1.txt

macOS 10.12.6, MacBook Air, NVIDIA GeForce 320M 256 MB broken: 2.78c, build hash e92f235 2.79rc1, build hash: f934f54 Daily build, Hash 535e83687d3 I can reproduce the crash here, launched from the command line with **--enable-new-depsgraph --debug-depsgraph **. [report_279rc1.txt](https://archive.blender.org/developer/F717344/report_279rc1.txt) [debug_279rc1.txt](https://archive.blender.org/developer/F717348/debug_279rc1.txt)

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29
Sergey Sharybin was assigned by Bastien Montagne 2017-08-26 14:57:49 +02:00

@Sergey, think that one is for you. :)

@Sergey, think that one is for you. :)

This issue was referenced by c622533fa0

This issue was referenced by c622533fa01a9f478d5116ca68ad299081ae22b4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52432
No description provided.