Fix T52432: Blender crashes while using Ghost (new depsgraph)